fixed shortcut bugs. Fixed spacing on pie charts.

--- a/style/style.css
+++ b/style/style.css
@@ -58,7 +58,7 @@ small.subtitle {
     font-weight: 200;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1074px) {
     h1.title {
         font-size: 36px;
     }
